# NMPC_implementation_schwebekoerper

./: README.md
project_schwebekoerper/: Makefile
project_schwebekoerper/data/mess1/: input.npy  state0.npy  state1.npy  state2.npy
project_schwebekoerper/data/mess2/: input.npy  state0.npy  state1.npy  state2.npy
project_schwebekoerper/script/: stty_start.sh
project_schwebekoerper/src/: acado_function.c  main.c  py_read.py  stm32f7xx_hal_msp.c  test.py
schwebekoerper_acado/: CMakeLists.txt  schwebekoerper  schwebekoerper.cpp  temp  test.c
schwebekoerper_acado/schwebekoerper_export/: test  test.c
